# map-reduce

./: create_vm.py  delete_vm.py  start.sh  stop.sh  user_parameters.py
core/: CMakeLists.txt  a  compile_grpc.sh  input.txt  mapper.py  master-client.cpp  master-worker.proto  reducer.py  split.h  split_file.cpp  test_mutil_thread  test_mutil_thread.cpp  worker-server.cpp
core/rpc_generated/: master-worker.grpc.pb.cc  master-worker.grpc.pb.h  master-worker.pb.cc  master-worker.pb.h
